--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -38,6 +38,14 @@ $(document).ready(function(){
 });
 */
 </script> 
+<script>
+$(document).ready(function () {
+  $(".fontawesome-bell-alt").click(function () {
+    $(this).toggleClass("open");
+    $("#notificationMenu").toggleClass("open");
+  });
+});
+</script>
 <script language="javascript">
 /*
 function aparecerbola(){
@@ -112,7 +120,7 @@ btn.value = "me gusta (" + i + ")";
 </script> 
 </head>
 
-
+<body>
 <body onLoad="aparecerbola()">
 <!-- <div id="oHBContainer"> -->
 <nav class="barrah">
@@ -139,8 +147,101 @@ btn.value = "me gusta (" + i + ")";
   		<div id ="box-tool">
 	  		<span class="fontawesome-th"></span>
 	  		<span class="fontawesome-comment-alt"></span>
-	  		<A class="fontawesome-random" href="aleatorio.html"</a>
+	  		<a class="fontawesome-random" href="aleatorio.html"</a>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
+	  		 <div class="contain">
+    <a href="#" class="fontawesome-bell-alt"></a>
+  
+    <ul id="notificationMenu" class="notifications">
+      <li class="titlebar">
+        <span class="title">Notifications</span>
+        <span class="settings"><i class="icon-cog"></i>
+        </span>
+      </li>
+      <div class="notifbox">
+        <li class=" notif unread">
+          <a href="#">
+            <div class="imageblock"> 
+              <img src="https://si0.twimg.com/profile_images/3186728694/7a0e012910e06dd1476c5edac8b9a28d_bigger.jpeg" class="notifimage"  />
+            </div> 
+            <div class="messageblock">
+              <div class="message">This guy <strong>Jonesy</strong> has just built a tower.
+              </div>
+              <div class="messageinfo">
+                <i class="icon-trophy"></i>2 hours ago
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif unread">
+          <a href="#">
+            <div class="imageblock">
+              <img src="https://si0.twimg.com/profile_images/712543138/Self-Portrait-in-Stripes_bigger.jpg" class="notifimage"  />
+            </div> 
+            <div class="messageblock">
+              <div class="message">
+                <strong>Pete Nawara</strong> want's to drink beer with you
+              </div>
+              <div class="messageaction">
+                <a class="button tiny success">accept</a> 
+                <a class="button tiny alert">decline</a>
+              </div>
+              <div class="messageinfo">
+                <i class="icon-flag"></i>3 hour ago
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif">
+          <a href="#">
+            <div class="imageblock"><img src="https://si0.twimg.com/profile_images/3312733808/5caeaec6d93114657c40fb257f933d28_bigger.jpeg" class="notifimage" />
+            </div> 
+            <div class="messageblock">
+              <div class="message"><strong>Gary LaPlante</strong> has talked some trash: "<em>Buncha bitches.</em>
+              </div>
+              <div class="messageinfo">
+                <i class="icon-comment"></i>4 hours ago
+              </div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif">
+          <a href="#">
+            <div class="imageblock"><img src="https://si0.twimg.com/profile_images/378800000168755934/c05afa029d7e42c59e7cca0ea0564a86_bigger.jpeg" class="notifimage" /></div> 
+            <div class="messageblock">
+              <div class="message"><strong>Jason Nawara</strong> is probably playing <strong>Smite</strong> right now.
+              </div>
+              <div class="messageinfo"><i class="icon-trophy"></i>Yesterday</div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif">
+          <a href="#">
+            <div class="imageblock"><img src="https://si0.twimg.com/sticky/default_profile_images/default_profile_2_bigger.png" class="notifimage"  />
+            </div> 
+            <div class="messageblock">
+              <div class="message"><strong>Danny DK12</strong> got a sweet fade!</div>
+              
+              <div class="messageinfo"><i class="icon-flag"></i>Yesterday</div>
+            </div>
+          </a>
+        </li>
+        <li class=" notif">
+          <a href="#">
+            <div class="imageblock"><img src="https://si0.twimg.com/profile_images/1091562021/me-small_bigger.png" class="notifimage"  /></div> 
+            <div class="messageblock">
+              <div class="message"><strong>Roidberg</strong> left you a comment: "<em>Hey buddy! Nice toenails!"</em></div>
+              <div class="messageinfo"><i class="icon-comment"></i>2 hours ago</div>
+            </div>
+          </a>
+        </li>
+      </div>
+      <li class="seeall">
+        <a>See All</a>
+      </li>
+    </ul>
+  </div>
+
 	  		
 	  	</div>
 
@@ -151,6 +252,7 @@ btn.value = "me gusta (" + i + ")";
 
 {% block content %}{% endblock %}
 
+</body>
 </body>
 
 <footer class="container">
