--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -15,6 +15,7 @@
 <script src="{{STATIC_URL}}js/profile.js"></script>
 <script src="{{STATIC_URL}}js/jquery.colorbox.js"></script>
 <script src="{{STATIC_URL}}js/noti.js"></script>
+<script src="{{STATIC_URL}}js/notia.js"></script>
 
 {% block include_files %}{% endblock %}
 
@@ -38,14 +39,7 @@ $(document).ready(function(){
 });
 */
 </script> 
-<script>
-$(document).ready(function () {
-  $(".fontawesome-bell-alt").click(function () {
-    $(this).toggleClass("open");
-    $("#notificationMenu").toggleClass("open");
-  });
-});
-</script>
+
 <script language="javascript">
 /*
 function aparecerbola(){
