--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1508,11 +1508,11 @@ button:hover {
 @primary: #007fff;
 
 .contain {
-  width: 500px;
-  margin: 0 auto;
+ /* width: 500px;
+  margin: 0 auto; */
   position: relative;
   padding: 20px;
-  float:left;
+  float:right;
 }
 .notificationicon {
   height: 44px;
