--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -144,7 +144,7 @@ btn.value = "me gusta (" + i + ")";
 	  		<a class="fontawesome-random" href="aleatorio.html"</a>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
 	  		 <div class="contain">
-    <a href="#" class="fontawesome-bell-alt"></a>
+    <span href="#" class="fontawesome-bell-alt"></span>
   
     <ul id="notificationMenu" class="notifications">
       <li class="titlebar">
@@ -235,7 +235,6 @@ btn.value = "me gusta (" + i + ")";
       </li>
     </ul>
   </div>
-
 	  		
 	  	</div>
 
