--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -39,6 +39,14 @@ $(document).ready(function(){
 });
 */
 </script> 
+<script language="javascript">
+$(document).ready(function () {
+  $(".fontawesome-bell-alt").click(function () {
+    $(this).toggleClass("open");
+    $("#notificationMenu").toggleClass("open");
+  });
+});
+</script>
 
 <script language="javascript">
 /*
