--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -144,7 +144,15 @@ btn.value = "me gusta (" + i + ")";
 	  		<a class="fontawesome-random" href="aleatorio.html"</a>
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
 
-	  		
+	  		<div class="notifications">
+  <div class="fontawesome-bell"></div>
+  <div class="messages">
+    <a href="#" class="message">Someone added you</a>
+    <a href="#" class="message">Someone added you</a>
+    <a href="#" class="message">Someone added you</a>
+  </div>
+</div>
+
 	  	</div>
 
 
