--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1496,3 +1496,53 @@ button:hover {
   font-size: 20px;
   color:white;
 }
+
+
+
+
+
+.fontawesome-bell {
+  color: #FFBE25;
+  font-size: 50px;
+  font: bold;
+  margin: 10px;
+  top: 10px;
+  
+}
+
+
+.notifications .messages {
+  display:block;
+  position:absolute;
+  top:100px;
+  left:-80px;
+  width:240px;
+  max-height:240px;
+}
+
+.notifications .messages:before {
+  content:'.';
+  display:block;
+  position:absolute;
+  margin-left:-10px;
+  left:50%;
+  top:-18px;
+  width:0;
+  height:0;
+  color:transparent;
+  border:10px solid black;
+  border-color:transparent transparent white;
+}
+
+.notifications .messages .message {
+  display:block;
+  position:relative;
+  padding:10px;
+  background-color:white;
+  color:black;
+  text-decoration:none;
+}
+
+.notifications .messages .message + .message {
+  border-top:1px solid #e0e0e0;
+}
