--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -145,7 +145,7 @@ btn.value = "me gusta (" + i + ")";
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
 
 	  		<div class="notifications">
-  <div class="fontawesome-bell"></div>
+  <span class="fontawesome-bell"></span>
   <div class="messages">
     <a href="#" class="message">Someone added you</a>
     <a href="#" class="message">Someone added you</a>
