--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1504,11 +1504,10 @@ button:hover {
 .fontawesome-bell {
   color: #FFBE25;
   font-size: 38px;
-  font: bold;
   display: inline-block;
-  position: relative;
   margin-left:15px;
   padding:0px;
+  text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
 }
 
 
