--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1504,7 +1504,7 @@ button:hover {
 .fontawesome-bell {
   color: #FFBE25;
   font-size: 38px;
-  top: -75px;
+  margin-top: -105px;
   display: inline-block;
   margin-left:-30px;
   padding:0px;
