--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1503,10 +1503,11 @@ button:hover {
 
 .fontawesome-bell {
   color: #FFBE25;
+  cursor:pointer;
+  text-align:center;
   font-size: 38px;
   display: inline-block;
   margin-left:-30px;
-  padding:-40px;
   text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
 }
 
