--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1506,6 +1506,7 @@ button:hover {
   cursor:pointer;
   text-align:center;
   font-size: 38px;
+  margin-top: -50px;
   display: inline-block;
   margin-left:-30px;
   text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
