--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1504,7 +1504,7 @@ button:hover {
 .fontawesome-bell {
   color: #FFBE25;
   cursor:pointer;
-  text-align:center;
+  text-align:right;
   font-size: 38px;
   margin:10px;
   display: inline-block;
