--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1501,41 +1501,17 @@ button:hover {
 
 
 
-.fontawesome-bell:after, .fontawesome-bell:before {
+.fontawesome-bell {
   color: #FFBE25;
   cursor:pointer;
-  text-align:right;
+  text-align:center;
   font-size: 38px;
-  margin:10px;
+  margin-top: -50px;
   display: inline-block;
   margin-left:-30px;
   text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
 }
-.fontawesome-bell:after
-{
-  content: "\f0f3";
-  font-family: "FontAwesome";
-  text-align: right;
-  background: transparent;
-  box-shadow: none;
-  transform-origin: 70% 1em;
-  animation-name: ring;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-}
 
-@keyframes ring
-  {
-    0% { transform: rotate(0deg) }
-    5% { transform: rotate(45deg) }
-    15% { transform: rotate(-40deg) }
-    25% { transform: rotate(20deg) }
-    35% { transform: rotate(-15deg) }
-    45% { transform: rotate(10deg) }
-    55% { transform: rotate(-5deg) }
-    60% { transform: rotate(0deg) }
-    100% { transform: rotate(0deg) }
-  }
 
 .notifications .messages {
   display:block;
