--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1502,7 +1502,7 @@ button:hover {
 
 
 .fontawesome-bell {
-  color: #FFBE25;
+  color: transparent;
   cursor:pointer;
   text-align:center;
   font-size: 38px;
@@ -1511,7 +1511,9 @@ button:hover {
   margin-left:-30px;
   text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
 }
-
+.fontawesome-bell {
+  color: #FFBE25;
+}
 
 .notifications .messages {
   display:block;
