--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1520,7 +1520,7 @@ button:hover {
   display:block;
   position:absolute;
   top:100px;
-  left:80px;
+  right:80px;
   width:240px;
   max-height:240px;
 }
