--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -293,7 +293,7 @@
           <div class="col-lg-3"><a class="photos">Mirar fotos</a></div>
         </div>
       </div>
-      <div class="messages">
+     <!--<div class="messages">
         <div class="messages-box">
           <div class="message notice">
             <button data-close="true" class="close"></button>
@@ -310,7 +310,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="col-lg-4 col-md-6 col-sm-12">
     <div class="container">
