--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -293,41 +293,15 @@
           <div class="col-lg-3"><a class="photos">Mirar fotos</a></div>
         </div>
       </div>
-      <div id="contenedor">
-      <div class="grupos">
-        <ul class="grup">
-          <li><img class="img" src="http://www.mis-dibujos-favoritos.com/Images/Large/Heroes-para-ninos-Troll-face-437429.png" alt="Smiley face" height="52" width="52">
-            <p>Yo tambien creo que las moscas traman algo con esa frotada de manos</p>
-            <ul class="controls">
-              <span class="fontawesome-heart"></span>
-              <span class="fontawesome-share"></span>
-              <span class="fontawesome-trash"></span>
-            
-            </ul></li>
-             <li class="l"><img class="img" src="http://st3.flashrolls.net/wallpaper/147/6584472559da8ffab7961d9a5e399005.jpg" alt="Smiley face" height="52" width="52"><p>Pequeños toques hacen grandes rasgos.</p></li>
-                <li class="l2"><img class="img" src="http://www.nocturnar.com/imagenes/fotos/wallpapers-fondos-de-pantalla-wallpaper-wallpaper-lampadas-wallpapers.jpg" alt="Smiley face" height="52" width="52"><p>El presente ya es el porvenir y el olvido.</p></li>
-            
-        </ul>
-      </div>
-    </div>
-     <!--<div class="messages">
+
+    <div class="messages">
         <div class="messages-box">
           <div class="message notice">
             <button data-close="true" class="close"></button>
             <div class="message-text"></div>
           </div>
-          <div class="message success">
-            <button data-hide="true" class="close"></button>
-            <div class="message-text"></div>
-          </div>
-          <div class="message error">
-            <button data-close="true" class="close"></button>
-            <div class="message-text"></div>
-          </div>
         </div>
-      </div>
-    </div>
-  </div> -->
+  </div>
 
   <div class="col-lg-4 col-md-6 col-sm-12">
     <div class="container">
