--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -830,7 +830,8 @@ body > .container {
   text-align: center;
   background: #ffcf00;
   padding: 2em 0 0;
-  color: white; }
+  color: white;
+  float:right; }
   .weather .current .icon {
     font-size: 9em; }
   .weather .current .temperature {
