--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -294,13 +294,23 @@
         </div>
       </div>
 
-    <div class="messages">
+     <div class="messages">
         <div class="messages-box">
           <div class="message notice">
             <button data-close="true" class="close"></button>
-            <div class="message-text"></div>
+            <div class="message-text">Ya estas dentro.</div>
+          </div>
+          <div class="message success">
+            <button data-hide="true" class="close"></button>
+            <div class="message-text">Comentario publicado correctamente.</div>
+          </div>
+          <div class="message error">
+            <button data-close="true" class="close"></button>
+            <div class="message-text">Tu no tienes permiso para borrar este comentario.</div>
           </div>
         </div>
+      </div>
+    </div>
   </div>
 
   <div class="col-lg-4 col-md-6 col-sm-12">
