--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1557,3 +1557,9 @@ button:hover {
 .notifications .messages .message + .message {
   border-top:1px solid #e0e0e0;
 }
+
+
+.fontawesome-heart-empty {
+  color: pink;
+  font-size: 20px;
+}
