--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -147,7 +147,7 @@ btn.value = "me gusta (" + i + ")";
 	  		<div class="notifications">
   <span class="fontawesome-bell"></span>
   <div class="messages">
-    <a href="#" class="message">Someone added you</a>
+    <a href="#" class="message"><span class="fontawesome-heart-empty">Someone added you</span></a>
     <a href="#" class="message">Someone added you</a>
     <a href="#" class="message">Someone added you</a>
   </div>
