--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -148,8 +148,8 @@ btn.value = "me gusta (" + i + ")";
   <span class="fontawesome-bell"></span>
   <div class="messages">
     <a href="#" class="message"><span class="fontawesome-heart-empty">Has recibido 1 me gusta.</span></a>
-    <a href="#" class="message">Someone added you</a>
-    <a href="#" class="message">Someone added you</a>
+    <a href="#" class="message"><span class="fontawesome-user">Fernando ha empezado a seguirte.</span></a>
+    <a href="#" class="message"><span class="fontawesome-coffee"></span>Quiere tomar algo contigo.</a>
   </div>
 </div>
 
