--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -149,7 +149,7 @@ btn.value = "me gusta (" + i + ")";
   <div class="messages">
     <a href="#" class="message"><span class="fontawesome-heart-empty">Has recibido 1 me gusta.</span></a>
     <a href="#" class="message"><span class="fontawesome-user">Fernando ha empezado a seguirte.</span></a>
-    <a href="#" class="message"><span class="fontawesome-coffee"></span>Quiere tomar algo contigo.</a>
+    <a href="#" class="message"><span class="fontawesome-coffee">Quiere tomar algo contigo.</span></a>
   </div>
 </div>
 
