--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1514,6 +1514,7 @@ button:hover {
   font-size: 38px;
   margin-top: -55px;
   display: block;
+  position:absolute;
   margin-left:-30px;
   text-shadow: 1px 1px 1px rgba(255,255,255,0.5);
 }
