--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -145,7 +145,7 @@ btn.value = "me gusta (" + i + ")";
 	  		<a class="fontawesome-cog" href="/config/changepass"></a>
 
 	  		<div class="notifications">
-  <span class="fontawesome-bell"></span>
+  <span class="fontawesome-bell"><label class="count">3</label></span>
   <div class="messages">
     <a href="#" class="message"><span class="fontawesome-heart-empty">Has recibido 1 me gusta.</span></a>
     <a href="#" class="message"><span class="fontawesome-user">Fernando ha empezado a seguirte.</span></a>
