--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1572,3 +1572,33 @@ button:hover {
   color: aquamarine;
   font-size: 17px;
 }
+
+.count {
+  .count {
+      background-color: $ltGrey;
+      border: 1px solid $lime;
+      border-radius: 14px;
+      color: $white;
+      display: block;
+      font-size: 1em;
+      line-height: 20px;
+      opacity: 0.7;
+      padding: 0 7px;
+      position: absolute;
+      right: -5px;
+      top: -17px;
+      z-index: 10;
+      
+      -webkit-transition: all 0.2s ease;
+      -moz-transition: all 0.2s ease;
+      -ms-transition: all 0.2s ease;
+      o-transition: all 0.2s ease;
+      transition: all 0.2s ease;
+}
+
+.count:hover {
+        box-shadow: 0 1px 2px rgba(0,0,0,0.75);
+        opacity: 1;
+        right: -8px;
+        top: -20px;
+      }
