--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1579,7 +1579,7 @@ button:hover {
       border-radius: 14px;
       color: $white;
       display: block;
-      font-size: 1em;
+      font-size: 4px;
       line-height: 20px;
       opacity: 0.7;
       padding: 0 7px;
