--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -12,6 +12,7 @@
 {% endblock %}
 
 {% block content %}
+<div id="cuerpo">
 <nav id="menu">
     <ul>
       <li><a class="fontawesome-eye-open" href="#">Más visitados.</a></li>
@@ -451,7 +452,7 @@
   </form>
 </div>
 
-
+</div></button></button></button></form></div></div></div></div></style>
 {% endblock%}
 
 
