--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -942,9 +942,9 @@ html, body {
   color: #46494c;
   height: 100%;
   padding: 0;
-  margin: 0;
-  min-width: 1580px;
-  max-width:auto;
+  margin: auto;
+  min-width: 80%;
+  max-width:100%;
 }
 
 a {
