--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -119,7 +119,14 @@ btn.value = "me gusta (" + i + ")";
 <!-- <div id="oHBContainer"> -->
 <nav class="barrah">
 <ul>
-<li><button type="button" id="Menu">Menu</button>
+<li><button type="button" id="Menu">
+  
+<div id="centro"><img src="" width="300" height="300"><span class="entypo-user"></span></div>
+<div id="llinkedin" class="size left"><span class="entypo-users"></span></div>
+<div id="ddribbble" class="size right"><span class="entypo-mail"></span></div>
+<div id="ffacebook" class="size left"><span class="entypo-calendar"></span></div>
+<div id="ttwitter" class="size right"><span class="entypo-logout"></span></div>
+    </button>
 <li><div class="field" id="searchform">
   	<!--<input type="text" id="searchterm" placeholder="¿Que es lo que quieres buscar?" />-->
   	<!--<button type="submit" class="btn">¡Buscar!</button>-->
