--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -967,7 +967,7 @@ a {
     opacity: 1; }
   #controls-container input {
     display: block; }
-#Menu {
+/*#Menu {
 color:white;
 position: absolute;
 border: none;
@@ -990,7 +990,7 @@ font-family: 'Andika', sans-serif;
 #Menu:hover {
     opacity: 0.8; }
 
-
+*/
 .fr {
   float: right; }
 
@@ -1599,3 +1599,116 @@ button:hover {
         right: -8px;
         top: -20px;
       }
+
+
+#Menu {
+  background:#eee;
+  color:#fff;
+  width:40px;
+  height:40px;
+  border:2px solid #eee;
+  -webkit-border-radius: 200px;
+  border-radius: 210px;
+  box-shadow:2px 0px 2px #444;
+  position:absolute;
+  left:5%;top:10%;
+  float: left;
+  /*margin:100px auto;*/
+  z-index:2;
+  overflow:hidden;
+  opacity: 1;
+  line-height: 1;
+  }
+
+  #centro {
+  padding-top: 0%;
+  width: 45%;
+  height: 47%;
+  background:#ccc;
+  border:5px solid #eee;
+  -webkit-border-radius: 30px;
+border-radius: 100px;
+  box-shadow:inset 0px 20px 45px #999;
+  position:absolute;
+  left:0;
+  right:0;
+  margin:75px auto;
+  z-index:2;
+  overflow:hidden;
+  font-size:9em;
+  text-shadow:0px 0px 15px #999;
+}
+
+#llinkedin {
+  color:rgba(14, 118, 168,0.5);
+  text-shadow: 1px 3px 6px #0e76a8,
+                0px 0px 0px #000,
+              1px 4px 6px #0e76a8;
+  background:#907AFB;
+  -webkit-border-radius:305px 0px 0px 0px;
+  border-radius:305px 0px 0px 0px;
+}
+
+#ddribbble {
+  color:rgba(226, 77, 135,0.5);
+    text-shadow: 1px 3px 6px #E24D87,
+                0px 0px 0px #000,
+              1px 4px 6px #E24D87;
+  background:#72FFB0;
+  -webkit-border-radius:0px 205px 0px 0px;
+  border-radius:0px 205px 0px 0px;
+}
+
+#ffacebook{
+  color:rgba(59, 89, 152,0.5);
+  text-shadow: 1px 3px 6px #00CEFC,
+                0px 0px 0px #000,
+              1px 4px 6px #0e76a8;
+  background:#F77AFB;
+  -webkit-border-radius:0px  0px 0px 205px;
+  border-radius:0px  0px 0px 205px;
+}
+
+#ttwitter {
+  color: #0092AC;
+    text-shadow: 1px 3px 6px #00CEFC,
+                0px 0px 0px #000,
+              1px 4px 6px #00CEFC;
+  background:#B9B9B9;
+  -webkit-border-radius:0px  0px 205px 0px ;
+  border-radius:0px  0px 205px 0px ;
+}
+#ttwitter span, #ffacebook span, #ddribbble span, #llinkedin span{
+margin-left:60px;
+margin-top:25px;
+}
+.size {
+  padding-top:15%;
+  font-size:2.5em;
+  margin-bottom:2%;
+  width:50%;
+    height:39%;
+  overflow:hidden;
+}
+
+  .left {
+    float:left;
+  }
+
+  .right {
+    float:right;
+  }
+
+#ffacebook:hover, #llinkedin:hover, #ddribbble:hover, #ttwitter:hover {
+    color:rgba(255,255,255,0.7);
+    cursor:pointer;
+
+}
+
+  .left {
+    float:left;
+  }
+
+  .right {
+    float:right;
+  }
