--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1135,7 +1135,7 @@ top: 5px;
   -webkit-transition: all 0.2s ease;
   transition: all 0.2s ease;
 z-index:  101;
-
+}
 &.is-hidden {
   opacity: 0;
   height: 0;
