--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1136,7 +1136,7 @@ top: 5px;
   transition: all 0.2s ease;
 z-index:  101;
 }
-&.is-hidden {
+.is-hidden {
   opacity: 0;
   height: 0;
   font-size: 0;
