--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -7,10 +7,10 @@
 	display: flex;
 	position: absolute;
 	margin: 5em auto;
-	width: 1.000em;
+	width: 901px;/*70%*/
 	height: 38px;
 	top: -50px;
-	left: 450px;
+	left: 10%;
 	flex-direction: row;
 	box-shadow:
    1px 1px 0 rgb(22, 160, 133),
