--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1349,6 +1349,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 }
 .clint:hover {
   opacity: 1;
+  border: 1px solid rgb(26, 188, 156);
 }
 
 
