--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1521,7 +1521,7 @@ button:hover {
 }
 
 .fontawesome-bell:hover {
-  color: #9421FF;
+  color: rgb(26, 188, 156);
 }
 
 .notifications .messages {
