--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -449,6 +449,10 @@ span[class*="thumbs-up"]:hover {
 .fontawesome-random:hover {
   opacity: 1;
   color: rgb(26, 188, 156);
+  border: 3px solid rgb(26, 188, 156);
+  border-right: none;
+  border-top: none;
+  border-left: none;
 }
 .fontawesome-comment-alt {
 color: transparent;
@@ -468,6 +472,10 @@ transition: all .3s ease-in-out;
 .fontawesome-comment-alt:hover {
 color: rgb(26, 188, 156);
 opacity:1;
+ border: 3px solid rgb(26, 188, 156);
+  border-right: none;
+  border-top: none;
+  border-left: none;
 }
 .fontawesome-th {
 color:transparent;
@@ -487,6 +495,10 @@ transition: all .3s ease-in-out;
 .fontawesome-th:hover {
 color: rgb(26, 188, 156);
 opacity: 1;
+ border: 3px solid rgb(26, 188, 156);
+  border-right: none;
+  border-top: none;
+  border-left: none;
 }
 .fontawesome-cog{
 color: transparent;
@@ -505,6 +517,10 @@ transition: all .3s ease-in-out;
 }
 .fontawesome-cog:hover {
   display: inline-block;
+   border: 3px solid rgb(26, 188, 156);
+  border-right: none;
+  border-top: none;
+  border-left: none;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: box-shadow;
