--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -358,8 +358,8 @@
     </p>
   </article>
   </div>
-   <div class="wrapper">                  
-  <div id="box">
+   <div class="wrapper2">                  
+  <div id="box2">
         <input id="profile" type="checkbox" checked> 
         <label class="popo" for="profile">
         <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
