--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -207,7 +207,7 @@ span[class*="thumbs-up"]:hover {
 
 article.articulo {
   float: right;
-  top: -100px;
+  top: -10%;
   position: relative;
   width: 201px;
   border-bottom: 1px solid #eee;
