--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -206,7 +206,7 @@ span[class*="thumbs-up"]:hover {
 }
 
 article.articulo {
-  float: right;
+  float: left;
   top: -60%;
   position: relative;
   width: 201px;
