--- a/skyfolk/static/css/password_form.css
+++ b/skyfolk/static/css/password_form.css
@@ -4,8 +4,8 @@ background:#efefef;
 
 }
 #pass {
-right: 20%;
-top: 20%;
+right: 480px;
+top: 280px;
 position:absolute;
 }
 #pass form{
@@ -22,8 +22,8 @@ box-shadow: rgb(196,196,196) 5px 5px;
 }
 #contra {
 /*top: -10px;*/
-width: 470px;
-height: 150px;
+width: 20%;
+height: 30%;
 /*margin-left: 385px;*/
 /*margin-top: -380px;*/
 font-family: 'Gafata', sans-serif;
@@ -35,7 +35,7 @@ border-radius: 8px 8px 8px 8px;
 box-shadow: rgb(196,196,196) 5px 5px;
 position: absolute;
 top:90px;
-left:370px;
+left:50%;
 }
 #cn {
 font-size: 20px;
@@ -64,6 +64,7 @@ color: black;
 border-radius: 8px 8px 8px 8px;
 text-shadow: rgb(150,150,150) 1px 1px 1px;
 margin-bottom: 25px;
+transition: all .3s ease-in-out;
 
 }
 #pass form fieldset input:hover {
