--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -33,8 +33,8 @@ font-family: 'Gafata', sans-serif;
 }
 /*Cuerpo*/
 #pass {
-right: 545px;
-top: 280px;
+right: 50%;
+top: 15%;
 position:absolute;
 width:270px;
 }
