--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -33,8 +33,8 @@ font-family: 'Gafata', sans-serif;
 }
 /*Cuerpo*/
 #pass {
-right: 30%;
-top: 25%;
+right: 35%;
+top: 35%;
 position:absolute;
 width:270px;
 }
@@ -139,8 +139,8 @@ border: 50px solid #FFF;
 border-radius: 8px 8px 8px 8px;
 box-shadow: rgb(196,196,196) 5px 5px;
 position: absolute;
-top:150px;
-left:970px;
+top:10%;
+left:50%;
 }
 #cn {
 font-size: 20px;
