--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -62,7 +62,7 @@
 -->
     <div id="middle"><img src="http://cinemarama.files.wordpress.com/2012/03/23.jpg" width="300" height="300"><span class="entypo-user"></span></div>
 
-    <div id="linkedin" class="size left"><a href="/friends"><span class="entypo-users"></span></a></div>
+    <div id="linkedin" class="size left"><a href="/amigos"><span class="entypo-users"></span></a></div>
     <div id="dribbble" class="size right"><span class="entypo-mail"></span></div>
     <div id="facebook" class="size left"><a href="/newsevent"><span class="entypo-calendar"></span></div></a>
     <div id="twitter" class="size right"><a href="{% url 'account_logout' %}"><span class="entypo-logout"></span></div></a>
