--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -3,10 +3,15 @@
     <head>
 
 <SCRIPT LANGUAGE="JavaScript">
-fondo = new Array(2);
+fondo = new Array(6);
 fondo[0] = '{{STATIC_URL}}img/6.jpg'
 fondo[1] = '{{STATIC_URL}}img/nueva-york1.jpg'
 fondo[2] = '{{STATIC_URL}}img/bg3.jpg'
+fondo[3] = '{{STATIC_URL}}img/8319280274_808eb31ec1_b.jpg'
+fondo[4] = '{{STATIC_URL}}img/9484523575_f08c124a53_b.jpg'
+fondo[5] = '{{STATIC_URL}}img/10071615715_2814161258_b.jpg'
+fondo[6] = '{{STATIC_URL}}img/14206119158_a72318300c_h.jpg'
+
 index = Math.floor(Math.random() * fondo.length);
 document.write("<BODY BACKGROUND="+fondo[index]+">");
 </SCRIPT>
@@ -68,7 +73,7 @@ document.write("<BODY BACKGROUND="+fondo[index]+">");
 	{% endblock %}
     </head>
     <body>
-
+         <img src="{{STATIC_URL}}img/logo.png" alt="logo" height="42" width="42">
        <div id="texto"><h2>S<span>kyfolk.</span></h2></div>
        {% block content %}{% endblock %}
 
