--- a/skyfolk/static/css/comentarios.css
+++ b/skyfolk/static/css/comentarios.css
@@ -97,8 +97,8 @@ span[class*="entypo-forward"] {
   float:left;
   display: block;
   font-size:38px;
-  height:100px;
-  width:70px;
+  height: 100%;
+  width:15%;
   line-height:55px;
   padding:31px 17px;
   opacity:100%;
@@ -115,8 +115,8 @@ span[class*="entypo-plus"] {
   float:left;
   display: block;
   font-size:38px;
-  height:100px;
-  width:70px;
+  height: 100%;
+  width:15%;
   line-height:55px;
   padding:31px 17px;
   opacity:100%;
@@ -134,8 +134,8 @@ span[class*="entypo-thumbs-up"] {
   float:left;
   display: block;
   font-size:38px;
-  height:100px;
-  width:70px;
+  height: 100%;
+  width:15%;
   line-height:55px;
   padding:31px 17px;
   opacity:100%;
