--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -83,7 +83,7 @@
 
 <div id="nav2">
 <ul class="nameact">   
-<div class="foto_perfil"></div><a href="#">Nombre Apellido<span class="entypo-right-open-big"></span></a></ul>
+<div class="foto_perfil"></div><a href="#">{{ user_profile.username }}<span class="entypo-right-open-big"></span></a></ul>
  
 
    
@@ -329,9 +329,9 @@
         <label class="popo" for="profile">
         <img src="http://www.1053kissfm.com/files/kp.jpg"alt="img">
         </label>
-        <span class="entypo-thumbs-up"></span> 
-        <span class="entypo-forward"></span>
-    <span class="entypo-plus"></span>
+        <span class="entypo-thumbs-up" title="¡Me gusta!"></span> 
+        <span class="entypo-forward" title="Responder"></span>
+    <span class="entypo-plus" title="Añadir a..."></span>
   </div>
   <article class="articulo">
     <h2 class="h22"><a href="http://www.twitter.com/random_studio" target="_blank" >_random_studio</a> mentioned you</h2>
