--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -75,7 +75,7 @@
     <i class="fa fa-bell-o"></i>
   </div>
   <div class="Mensaje-body">
-    <p>¡Bienvenido, Cristopher multisanti!</p>
+    <p>¡Bienvenido, {{ user_profile.username }}</p>
     <p class="u-italic">Acabas de entrar a Skyfolk satisfactoriamente.</p>
   </div>
   <button class="Mensaje-close js-messageClose"><i class="fa fa-times"></i></button>
