--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1077,6 +1077,7 @@ z-index: 9999;
   float: right;
   right: 10px;
   cursor: pointer;
+  position: fixed;
 }
 #nav2 {
     width: 20px;
@@ -1088,6 +1089,7 @@ z-index: 9999;
     list-style: none;
     padding: 0;
     margin: 0;
+    position: fixed;
     width: 225px;
 }
 .nameact a {
