--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1015,7 +1015,7 @@ width: 100%;
 position: fixed;
 display: block;
 box-shadow: 3px 2px 4px 3px;
-background: rgba(0, 0, 0, 0.7);
+background: #00FA96;
 opacity: 0.8;
 top: 5px;
 z-index: 9999;
