--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1294,7 +1294,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
   left: 20px;
   */
   float:left;
-  margin-top: 6px;
+  margin-top: 5%;
   margin-left: 10%;
 }
 
