--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1091,7 +1091,6 @@ z-index: 9999;
     padding: 0;
     margin: 0;
     width: 225px;
-    top: 70px;
 }
 .nameact a {
     display: block;
@@ -1105,6 +1104,7 @@ z-index: 9999;
     padding-left: 10px;
     font-size: 1.4em;
     border-bottom: 2px solid transparent;
+    top: 3%;
 }
 .nameact a span {
     float: right;
