--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1104,7 +1104,7 @@ z-index: 9999;
     padding-left: 10px;
     font-size: 1.4em;
     border-bottom: 2px solid transparent;
-    top: 50%;
+    margin-top: 50%;
 }
 .nameact a span {
     float: right;
@@ -1115,7 +1115,7 @@ z-index: 9999;
     font-size: 1.4em;
     text-align: center;
     line-height: 1.5;
-    top: 50%;
+    margin-top: 50%;
 }
 
 
