--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -83,7 +83,7 @@
 
 <div id="nav2">
 <ul class="nameact">   
-<div class="foto_perfil"></div><a href="#">{{ user_profile.username }}<span class="entypo-right-open-big"></span></a></ul>
+<div class="foto_perfil"></div></ul>
  
 
    
